--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
     </p>
     <p class="number-title">Monthly Listeners</p>
   </div>
-  <div class="number">
+  <div class="count">
     <p class="number">
-      1500k
+      200+
     </p>
-    <p class="number-title">Monthly Listeners</p>
+    <p class="number-title">Episodes Published</p>
   </div>
-  <div class="number">
+  <div class="count">
     <p class="number">
-      1500k
+      4.9★
     </p>
-    <p class="number-title">Monthly Listeners</p>
+    <p class="number-title">Average Rating</p>
   </div>
-  <div class="number">
+  <div class="count">
     <p class="number">
-      1500k
+      50+
     </p>
-    <p class="number-title">Monthly Listeners</p>
+    <p class="number-title">Industry Experts</p>
   </div>
  </div>
 </section>
