adding adount section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="count">
     <p class="number">
-      4.9★
+      4.9 ★
     </p>
     <p class="number-title">Average Rating</p>
   </div>
@@ -80,5 +80,6 @@
   </div>
  </div>
 </section>
+         <!-- Why Choose TechWave -->
 </body>
 </html>
