--- a/index.html
+++ b/index.html
@@ -81,5 +81,38 @@
  </div>
 </section>
          <!-- Why Choose TechWave -->
-</body>
+
+<section id="choose-main">
+<h3>Why Choose TechWave</h3>
+  <div id="choose">
+  <div id="audio" class="choose-content">
+    <img src="./media/headphone.png" alt="">
+      <p class="choose-title">Premium Audio Quality</p>
+      <p class="number-title">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+  
+  </div>
+  <div id="dvice" class="choose-content">
+    <img src="./media/device.png" alt="">
+      <p class="choose-title">Mobile Friendly</p>
+      <p class="number-title">Listen on the go with seamless mobile experience and offline downloads.</p>
+  </div>
+  <div id="community" class="choose-content">
+    <img src="./media/location.png" alt="">
+      <p class="choose-title">Global Community</p>
+      <p class="number-title">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+  </div>
+  <div id="interview" class="choose-content">
+    <img src="./media/shock.png"alt="">
+      <p class="choose-title">Exclusive Interviews</p>
+      <p class="number-title">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+  </div>
+  <div id="resource" class="choose-content">
+    <img src="./media/resource.png" alt="">
+      <p class="choose-title">Rich Resources</p>
+      <p class="number-title">Access show notes, transcripts, and additional learning materials for every episode.</p>
+  </div>
+  
+</div>
+</section>
+        </body>
 </html>
