--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          <!-- Why Choose TechWave -->
 
 <section id="choose-main">
-<h3>Why Choose TechWave</h3>
+<h3 class="common-heading">Why Choose TechWave</h3>
   <div id="choose">
   <div id="audio" class="choose-content">
     <img src="./media/headphone.png" alt="">
@@ -114,5 +114,107 @@
   
 </div>
 </section>
+<section id="video-section">
+  <h4 class="common-heading">
+    Meet the Host
+  </h4>
+<div id="feature">
+    <div class="video">
+   <iframe width="380" height="214" src="https://www.youtube.com/embed/muBBYZXYgoM?si=Vm8Gf79-Y8EmNXRO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen></iframe>
+      <div class="video-details">
+         <p class="choose-title">Building Better Habits for Remote Work</p>
+         <p class="number-title">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+        <div class="time">
+        <img src="./media/clock.png" alt="">
+        <p>35 min</p>
+      </div>
+      </div>
+  </div>
+  <div class="video">
+      <iframe width="380" height="214" src="https://www.youtube.com/embed/oF3-2vxj8XU?si=7feFwDBc_qqXKF0l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="video-details">
+         <p class="choose-title">Building Better Habits for Remote Work</p>
+         <p class="number-title">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+        <div class="time">
+        <img src="./media/clock.png" alt="">
+        <p>35 min</p>
+      </div>
+      </div>
+  </div>
+  <div class="video">
+       <iframe width="380" height="214" src="https://www.youtube.com/embed/Fowv2UMF2_s?si=Xxpe1b9aIgUYOkRi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="video-details">
+         <p class="choose-title">Building Better Habits for Remote Work</p>
+         <p class="number-title">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+        <div class="time">
+        <img src="./media/clock.png" alt="">
+        <p>35 min</p>
+      </div>
+      </div>
+  </div>
+</div>
+</section>
+
+        <!-- meet the host section  -->
+<section >
+ <h5 class="common-heading">
+  Meet the Host
+ </h5>
+ <div id="host-container">
+  <img src="./media/host.png" alt="">
+   <div id="host-description">
+        <p id="host-name">
+      Alex Kumar
+    </p>
+    <p class="number-title">
+     Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+    </p>
+    <div id="social-icon">
+      <img class="social" src="./media/linkedin.png" alt="">
+      <img class="social" src="./media/x.png" alt="">
+      <img class="social" src="./media/instagram.png" alt="">
+      <img class="social" src="./media/youtube.png" alt="">
+    </div>
+   </div>
+ </div>
+</section>
+
+        <!-- footer section  -->
+<footer>
+  <img src="./media/footer.png" alt="">
+  <div id="footer-icon">
+
+
+    <div class="icon-img"><img src="./media/spotify.png" alt="">
+      <p>Spotify</p>
+    </div>
+
+
+    <div class="icon-img"><img src="./media/apple-podcast.png" alt="">
+      <p>Apple Podc asts</p>
+    </div>
+
+
+    <div class="icon-img"><img src="./media/youtube-podcast.png" alt="">
+      <p>YouTube</p>
+    </div>
+
+
+   <div class="icon-img"><img src="./media/twitter.png" alt="">
+      <p>Twitter</p>
+    </div>
+  </div>
+
+<div id="copy-right">
+  <p>
+    © 2026 TechWave Podcast. All rights reserved.
+  </p>
+</div>
+</footer>
+
+
+
+
+
         </body>
 </html>
