--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
           <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="font-inter"> 
-                  <!-- nav section -->
+              <!-- nav section -->
 <nav>
 <div id="nav-container">
   <img src="./media/TechWave.png" alt="">
 <ul class="nav-list">
-  <li class="nev-item"><a href="" class="nav-link">  About</a></li>
-  <li class="nev-item"><a href="" class="nav-link">Episodes</a></li>
-  <li class="nev-item"><a href="" class="nav-link">Host</a></li>
+  <li class="nev-item"><a href="#about" class="nav-link">  About</a></li>
+  <li class="nev-item"><a href="#video-section" class="nav-link">Episodes</a></li>
+  <li class="nev-item"><a href="#host-container" class="nav-link">Host</a></li>
 </ul>
 <button id="nav-btn">Subscribe <img src="./media/ArrowRight.png" alt=""></button>
+<img id="hamburger" src="./media/hamburger-menu.png" alt="">
 </div>
 
 </nav>
@@ -122,11 +123,11 @@
     <div class="video">
    <iframe width="380" height="214" src="https://www.youtube.com/embed/muBBYZXYgoM?si=Vm8Gf79-Y8EmNXRO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen></iframe>
       <div class="video-details">
-         <p class="choose-title">Building Better Habits for Remote Work</p>
-         <p class="number-title">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+         <p class="choose-title">The Future of AI in Everyday Life</p>
+         <p class="number-title">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next...</p>
         <div class="time">
         <img src="./media/clock.png" alt="">
-        <p>35 min</p>
+        <p>42 min</p>
       </div>
       </div>
   </div>
@@ -144,8 +145,8 @@
   <div class="video">
        <iframe width="380" height="214" src="https://www.youtube.com/embed/Fowv2UMF2_s?si=Xxpe1b9aIgUYOkRi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div class="video-details">
-         <p class="choose-title">Building Better Habits for Remote Work</p>
-         <p class="number-title">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+         <p class="choose-title">Career Growth in Tech: A Roadmap</p>
+         <p class="number-title">Expert advice on navigating your tech career from junior developer to senior leadership...</p>
         <div class="time">
         <img src="./media/clock.png" alt="">
         <p>35 min</p>
@@ -161,7 +162,7 @@
   Meet the Host
  </h5>
  <div id="host-container">
-  <img src="./media/host.png" alt="">
+  <img id="host-png" src="./media/host.png" alt="">
    <div id="host-description">
         <p id="host-name">
       Alex Kumar
@@ -181,7 +182,7 @@
 
         <!-- footer section  -->
 <footer>
-  <img src="./media/footer.png" alt="">
+  <img id="footer-img" src="./media/footer.png" alt="">
   <div id="footer-icon">
 
 
