--- a/index.html
+++ b/index.html
@@ -208,13 +208,10 @@
 
 <div id="copy-right">
   <p>
-    © 2026 TechWave Podcast. All rights reserved.
+    &#xA9; 2026 TechWave Podcast. All rights reserved.
   </p>
 </div>
 </footer>
-
-
-
 
 
         </body>
